# bpi-stats

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  bpistats.cpp  prices.json
src/: CMakeLists.txt  app.cpp  app.h  dataRetriever.cpp  dataRetriever.h  priceDatabase.cpp  priceDatabase.h  printer.cpp  printer.h  statistic.cpp  statistic.h
unitTests/: CMakeLists.txt  unitTests.cpp
